# circom

./: .gitignore  404.html  Cargo.toml  README.md  RELEASES.md  index.html  sitemap.xml
circom/: Cargo.toml
circom/src/: compilation_user.rs  execution_user.rs  input_user.rs  main.rs  parser_user.rs  type_analysis_user.rs
circom_compiler/: Cargo.toml
circom_compiler/src/: compiler_interface.rs  lib.rs
circom_compiler/src/circuit_design/: build.rs  circuit.rs
circom_compiler/src/hir/: component_preprocess.rs  merger.rs  sugar_cleaner.rs  type_inference.rs  very_concrete_program.rs
circom_compiler/src/intermediate_representation/: branch_bucket.rs  call_bucket.rs  compute_bucket.rs  load_bucket.rs  return_bucket.rs  store_bucket.rs  translate.rs
circom_compiler/src/ir_processing/: build_inputs_info.rs  build_stack.rs
circom_constraint_generation/: Cargo.toml
circom_constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
circom_constraint_generation/src/environment_utils/: component_representation.rs
circom_constraint_generation/src/execution_data/: executed_program.rs  executed_template.rs
circom_dag/: Cargo.toml
circom_dag/src/: constraint_correctness_analysis.rs  lib.rs  map_to_constraint_list.rs
circom_parser/: Cargo.toml
circom_parser/src/: errors.rs  include_logic.rs  lang.lalrpop  lib.rs  parser_logic.rs  test.rs
circom_type_analysis/: Cargo.toml
circom_type_analysis/src/: check_types.rs
circom_type_analysis/src/analyzers/: functions_all_paths_with_return_statement.rs  functions_free_of_template_elements.rs  no_returns_in_template.rs  signal_declaration_analysis.rs  symbol_analysis.rs  tag_analysis.rs  type_check.rs  type_given_function.rs  type_register.rs  unknown_known_analysis.rs
circom_type_analysis/src/decorators/: constants_handler.rs
compiler/: Cargo.toml
compiler/circom/: Cargo.toml
compiler/circom/src/: compilation_user.rs  execution_user.rs  input_user.rs  main.rs  parser_user.rs  type_analysis_user.rs
compiler/circom_algebra/: Cargo.toml
compiler/circom_algebra/src/: algebra.rs  simplification_utils.rs
compiler/circom_algebra/src/constraint_storage/: mod.rs
compiler/circom_ast/: Cargo.toml
compiler/circom_ast/src/: ast_shortcuts.rs  definition.rs  expression.rs  knowledge.rs  lib.rs  meta.rs
compiler/circom_code_producers/: Cargo.toml
compiler/circom_code_producers/src/c_elements/: c_code_generator.rs
compiler/circom_compiler/: Cargo.toml
compiler/circom_compiler/src/: lib.rs
compiler/circom_compiler/src/circuit_design/: build.rs  circuit.rs  function.rs  template.rs
compiler/circom_compiler/src/hir/: analysis_utilities.rs  merger.rs  very_concrete_program.rs
compiler/circom_compiler/src/intermediate_representation/: assert_bucket.rs  branch_bucket.rs  call_bucket.rs  compute_bucket.rs  create_component_bucket.rs  ir_interface.rs  load_bucket.rs  log_bucket.rs  loop_bucket.rs  return_bucket.rs  store_bucket.rs  translate.rs  value_bucket.rs
compiler/circom_constant_tracking/: Cargo.toml
compiler/circom_constraint_generation/: Cargo.toml
compiler/circom_constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
compiler/circom_constraint_list/: Cargo.toml
compiler/circom_constraint_list/src/: constraint_simplification.rs  json_porting.rs  lib.rs  r1cs_porting.rs  sym_porting.rs
compiler/circom_constraint_writers/: Cargo.toml
compiler/circom_constraint_writers/src/: sym_writer.rs
compiler/circom_dag/: Cargo.toml
compiler/circom_dag/src/: json_porting.rs  lib.rs  map_to_constraint_list.rs  r1cs_porting.rs  statistics_porting.rs  sym_porting.rs
compiler/circom_error/: Cargo.toml
compiler/circom_error/src/: file_definition.rs  lib.rs
compiler/circom_parser/: Cargo.toml
compiler/circom_parser/src/: errors.rs  lang.lalrpop  lib.rs  parser_logic.rs
compiler/circom_program_structure/: Cargo.toml
compiler/circom_type_analysis/: Cargo.toml
compiler/circom_type_analysis/src/: check_types.rs
compiler/code_producers/: Cargo.toml
compiler/compiler/: Cargo.toml
compiler/compiler/src/: lib.rs
compiler/constant_tracking/: Cargo.toml
compiler/constraint_generation/: Cargo.toml
compiler/constraint_generation/src/: compute_constants.rs  lib.rs
compiler/constraint_list/: Cargo.toml
compiler/constraint_list/src/: json_porting.rs  non_linear_utils.rs  r1cs_porting.rs  sym_porting.rs
compiler/constraint_writers/: Cargo.toml
compiler/constraint_writers/src/: lib.rs
compiler/dag/: Cargo.toml
compiler/dag/src/: json_porting.rs  lib.rs  r1cs_porting.rs  statistics_porting.rs  sym_porting.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: errors.rs  include_logic.rs  lang.lalrpop  lib.rs  parser_logic.rs
compiler/program_structure/: Cargo.toml
compiler/program_structure/src/: lib.rs
compiler/src/: compiler_interface.rs
compiler/src/circuit_design/: build.rs  circuit.rs  template.rs
compiler/src/hir/: component_preprocess.rs  merger.rs  sugar_cleaner.rs  type_inference.rs  very_concrete_program.rs
compiler/src/intermediate_representation/: branch_bucket.rs  call_bucket.rs  create_component_bucket.rs  ir_interface.rs  load_bucket.rs  log_bucket.rs  loop_bucket.rs  return_bucket.rs  store_bucket.rs  translate.rs  value_bucket.rs
compiler/src/ir_processing/: build_inputs_info.rs  build_stack.rs  reduce_stack.rs
compiler/type_analysis/: Cargo.toml
compiler/type_analysis/src/: lib.rs
constraint_generation/: Cargo.toml
constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
constraint_generation/src/environment_utils/: component_representation.rs
constraint_generation/src/execution_data/: executed_program.rs  executed_template.rs  filters.rs
dag/: Cargo.toml
dag/src/: constraint_correctness_analysis.rs  json_porting.rs  lib.rs  map_to_constraint_list.rs  r1cs_porting.rs
program_structure/: Cargo.toml
program_structure/src/program_library/: function_data.rs  program_archive.rs  program_merger.rs  template_data.rs
program_structure/src/utils/: constants.rs  environment.rs  memory_slice.rs
(+183 files in other folders)
