[package]
name = "circom"
version = "2.0.5"
authors = ["Costa Group UCM & iden3"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser", version = "2" }
program_structure = { path = "../program_structure", version = "2" }
type_analysis = { path = "../type_analysis", version = "2" }
constraint_generation = { path = "../constraint_generation", version = "2" }
constraint_writers = { path = "../constraint_writers", version = "2" }
compiler = { path = "../compiler", version = "2" }
dag = { path = "../dag", version = "2" }
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
