[package]
name = "circom_constraint_generation"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
num-traits = "0.2.6"
num-bigint-dig = "0.6.0"
compiler = { package = "circom_compiler", path = "../circom_compiler", version = "2" }
circom_algebra = { path = "../circom_algebra", version = "2" }
program_structure = { package = "circom_program_structure", path = "../circom_program_structure", version = "2" }
constraint_writers = { package = "circom_constraint_writers", path = "../circom_constraint_writers", version = "2" }
constraint_list = { package = "circom_constraint_list", path = "../circom_constraint_list", version = "2" }
dag = { package = "circom_dag", path = "../circom_dag", version = "2" }
