[package]
name = "circom_dag"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_list = { package = "circom_constraint_list", path = "../circom_constraint_list", version = "2" }
constraint_writers = { package = "circom_constraint_writers", path = "../circom_constraint_writers", version = "2" }
circom_algebra = { path = "../circom_algebra", version = "2" }
program_structure = { package = "circom_program_structure", path = "../circom_program_structure", version = "2" }
json = "0.12.4"
