[package]
name = "circom_parser"
version = "2.0.1"
authors = ["Hermenegildo <hermegar@ucm.es>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }
num-bigint = { package = "num-bigint-dig", version = "0.6.0" }

[dependencies]
circom_error = { path = "../circom_error" }
circom_program_structure = { path = "../circom_program_structure", version = "2" }
lalrpop-util = "0.18.1"
num-bigint = { package = "num-bigint-dig", version = "0.6.0" }
