[package]
name = "circom_type_analysis"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
circom_error = { path = "../circom_error" }
program_structure = { package = "circom_program_structure", path = "../circom_program_structure", version = "2" }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
