[package]
name = "compiler"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constant_tracking = { path = "../constant_tracking", version = "2" }
program_structure = { path = "../program_structure", version = "2" }
code_producers = { path = "../code_producers", version = "2" }
num-bigint-dig = "0.6.0"
