[workspace]
members = [
    "circom_parser",
    "circom",
    "circom_compiler",
    "circom_type_analysis",
    "circom_algebra",
    "circom_constraint_list",
    "circom_program_structure",
    "circom_constraint_generation",
    "circom_constraint_writers",
    "circom_constant_tracking",
    "circom_code_producers",
    "circom_dag",
]

[profile.release]
opt-level = 3
lto = true
strip = true
