[package]
name = "dag"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_list = { path = "../constraint_list", version = "2" }
constraint_writers = { path = "../constraint_writers", version = "2" }
circom_algebra = { path = "../circom_algebra", version = "2" }
program_structure = { path = "../program_structure", version = "2" }
json = "0.12.4"
