[package]
name = "program_structure"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
circom_ast = { path = "../circom_ast" }
circom_error = { path = "../circom_error" }
