[package]
name = "circom"
version = "2.0.6"
authors = ["Costa Group UCM & iden3"]
edition = "2021"

[dependencies]
clap = "3"
ansi_term = "0.12"
wast = "45"

# Internal
circom_error = { path = "../circom_error" }
parser = { path = "../parser" }
program_structure = { path = "../program_structure" }
type_analysis = { path = "../type_analysis" }
constraint_generation = { path = "../constraint_generation" }
constraint_writers = { path = "../constraint_writers" }
compiler = { path = "../compiler" }
dag = { path = "../dag" }
