[package]
name = "circom"
version = "2.0.6"
authors = ["Costa Group UCM & iden3"]
edition = "2021"

[dependencies]
clap = "3"
ansi_term = "0.12"
wast = "45"

# Internal
circom_error = { path = "../circom_error" }
circom_parser = { path = "../circom_parser" }
circom_program_structure = { path = "../circom_program_structure" }
circom_type_analysis = { path = "../circom_type_analysis" }
circom_constraint_generation = { path = "../circom_constraint_generation" }
circom_constraint_writers = { path = "../circom_constraint_writers" }
circom_compiler = { path = "../circom_compiler" }
circom_dag = { path = "../circom_dag" }
