[package]
name = "circom_algebra"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"
homepage = "https://docs.circom.io/"
license = "GPL-3.0-only"
repository = "https://github.com/iden3/circom"

[dependencies]
num-bigint-dig = "0.8"
num-traits = "0.2"

# Internal
circom_constant_tracking = { path = "../circom_constant_tracking", version = "2" }
