[package]
name = "circom_compiler"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"
homepage = "https://docs.circom.io/"
license = "GPL-3.0-only"
repository = "https://github.com/iden3/circom"

[dependencies]
num-bigint-dig = "0.8"

# Internal
circom_error = { path = "../circom_error", version = "2" }
circom_ast = { path = "../circom_ast", version = "2" }
circom_constant_tracking = { path = "../circom_constant_tracking", version = "2" }
circom_program_structure = { path = "../circom_program_structure", version = "2" }
circom_code_producers = { path = "../circom_code_producers", version = "2" }
