[package]
name = "circom_constraint_generation"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
num-bigint-dig = "0.8"

# Internal
circom_dag = { path = "../circom_dag" }
circom_ast = { path = "../circom_ast" }
circom_error = { path = "../circom_error" }
circom_compiler = { path = "../circom_compiler" }
circom_algebra = { path = "../circom_algebra" }
circom_program_structure = { path = "../circom_program_structure" }
circom_constraint_writers = { path = "../circom_constraint_writers" }
circom_constraint_list = { path = "../circom_constraint_list" }
