[package]
name = "circom_constraint_list"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1"
threadpool = "1"
num_cpus = "1"

# Internal
circom_constraint_writers = { path = "../circom_constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
circom_program_structure = { path = "../circom_program_structure" }
