[package]
name = "circom_type_analysis"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
num-bigint-dig = "0.8"

# Internal
circom_program_structure = { path = "../circom_program_structure", version = "2"  }
circom_ast = { path = "../circom_ast", version = "2"  }
circom_error = { path = "../circom_error", version = "2"  }
