[package]
name = "compiler"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint-dig = "0.6.0"

# Internal
circom_error = { path = "../circom_error" }
circom_ast = { path = "../circom_ast" }
constant_tracking = { path = "../constant_tracking" }
program_structure = { path = "../program_structure" }
code_producers = { path = "../code_producers" }
