[package]
name = "constraint_generation"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
num-bigint-dig = "0.8"

# Internal
dag = { path = "../dag" }
circom_ast = { path = "../circom_ast" }
circom_error = { path = "../circom_error" }
compiler = { path = "../compiler" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
constraint_writers = { path = "../constraint_writers" }
constraint_list = { path = "../constraint_list" }
