[package]
name = "constraint_list"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
json = "0.12"
threadpool = "1"
num_cpus = "1"

# Internal
constraint_writers = { path = "../constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
