[package]
name = "constraint_writers"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

# Internal
circom_algebra = { path = "../circom_algebra" }
