[package]
name = "dag"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1"

# Internal
constraint_list = { path = "../constraint_list" }
constraint_writers = { path = "../constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
circom_error = { path = "../circom_error" }
